# knowledge_acquisition

./: README.md
examples_data_extraction/data_management/: CMakeLists.txt  package.xml
examples_data_extraction/data_management/prolog/: get_data.pl  init.pl
examples_data_extraction/memory_data_extraction/: CMakeLists.txt  package.xml  setup.py
examples_data_extraction/memory_data_extraction/prolog/: init.pl  memories.pl
examples_data_extraction/memory_data_extraction/scripts/: demo.py  gazebo.py  rvizMarkers.py.html  rviz_tools.py
examples_data_extraction/videos_data_extraction/: CMakeLists.txt  README.md  package.xml
