<package>
  <name>data_management</name>
  
  <version>1.0.0</version>
  
  <description>data_manage user package</description>
  
  <maintainer email="salinas@todo.todo">salinas</maintainer>
  
  <license>GPL</license>
  
  <url type="website">http://www.knowrob.org/</url>
  
  <author>lizyazpin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>knowrob_mongo</build_depend>
  
  <run_depend>knowrob_mongo</run_depend>
  
</package>
